<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"></View>

    <TextView
        android:id="@+id/color_textview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/default_color"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/size_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"></View>

    <TextView
        android:id="@+id/size_textview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/default_size"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/font_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"></View>

    <TextView
        android:id="@+id/font_textview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/default_font"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/other_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"></View>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/settings_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show settings box (you can always click the top right corner to access settings)"
            android:textSize="16dp" />
    </LinearLayout>


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Apply" />

</LinearLayout>